Generating question list

--- a/tickets.tex
+++ b/tickets.tex
@@ -17,9 +17,8 @@
 
 \ExamTicketHeader{ФЕДЕРАЛЬНОЕ АГЕНТСТВО НАУЧНЫХ ОРГАНИЗАЦИЙ \\
 ФЕДЕРАЛЬНОЕ ГОСУДАРСТВЕННОЕ БЮДЖЕТНОЕ НАУЧНОЕ УЧРЕЖДЕНИЕ \\
-«ФЕДЕРАЛЬНЫЙ НАУЧНЫЙ АГРОИНЖЕНЕРНЫЙ ЦЕНТР ВИМ» \\
-(ФГБНУ ФНАЦ ВИМ)}
+«НЕКОТОРЫЙ ФЕДЕРАЛЬНЫЙ ИНСТИТУТ»}
 
-\input{tickets}
+\input{tickets-list}
 
 \end{document}
